[package]
name = "medley"
version = "2.0.0-alpha"
edition = "2021"
license = "Apache-2.0 OR MIT"

[lib]
name = "cfe_medley"

[[bin]]
name = "medley"
path = "src/bin/medley.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
confy = "0.5.1"
dialoguer = "0.10.4"
num-derive = "0.3.3"
num-traits = "0.2.15"
serde = "1.0.160"
serde_derive = "1.0.160"
strum = "0.24.1"
strum_macros = "0.24.3"
